# constants

./: CMakeLists.txt  README.md
inc/: libreriaEuler.h  libreriaPhi.h  libreriaPi.h
src/: libreriaEuler.c  libreriaPhi.c  libreriaPi.c  programa.c  programaEuler.c  programaPhi.c
